Add fonts, colors, styles, text adjustments, and image changes.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US" class="no-js">
 <head>
 	<meta charset="utf-8">
-	<title>My Pal Saves - Palisades FCU</title>
+	<title>Make Money Matter - SELCCU</title>
 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -30,11 +30,11 @@
 					<div class="intro pad group">
 						<div class="thermometer savings-thermometer white" data-giraph-api-key="989a24c009a9376a67e31a1a9dbf135d"></div>
 						<script src="//giraph.io/api/thermometer/v1/js/widget.js"></script>
-						<p>Our goal is to save Rockland County Residents <strong>$1 Million</strong> in interest and fees this year to put back into the local economy. Come join us.</p>
+						<p>Our goal is to save our members <strong>$500,000</strong> in interest and fees this year to put back into what matters.</p>
 						<p>See how much you can save by telling us a little more about your loans below:</p>
 					</div>
 
-					<div class="loan-auto calculator bg-blue-dark">
+					<div class="loan-auto calculator bg-teal">
 						<div class="fourty">
 							<img src="img/rate-auto.png">
 						</div>
@@ -59,7 +59,8 @@
 						<div class="group"></div>
 					</div>
 
-					<div class="home calculator bg-teal">
+					<div class="home calculator bg-orange">
+						<input type="hidden" class="term" value="15y">
 						<div class="fourty">
 							<img src="img/rate-home.png">
 						</div>
@@ -69,20 +70,12 @@
 							<input type="hidden" class="rate_compare" value="1.99" />
 						</div>
 						<div class="thirty">
-							<p><label for="term">your current term</label>
-								<select class="term">
-									<option value="10y">10 yr</option>
-									<option value="15y">15 yr</option>
-									<option value="20y">20 yr</option>
-									<option value="25y">25 yr</option>
-									<option value="30y">30 yr</option>
-								</select>
-							</p>
+							&nbsp;
 						</div>
 						<div class="group"></div>
 					</div>
 					
-					<div class="loan-personal calculator bg-lime">
+					<div class="loan-personal calculator bg-grey">
 						<div class="fourty">
 							<img src="img/rate-personal.png">
 						</div>
@@ -105,7 +98,7 @@
 						<div class="group"></div>
 					</div>
 
-					<button class="calculate"><span>Fetch me</span> the savings!</button>
+					<button class="calculate"><span>My Money</span> Matters</button>
 
 				</div>
 
@@ -129,21 +122,14 @@
 		</div>
 
 		<div class="footer-bar group">
-			<div class="wrap">
-
-				<div class="half separator">
-					<a href="https://www.palisadesfcu.org/"><img src="img/logo.png"></a>
-				</div>
-				<div class="half">
-					<h2>888-474-1565</h2>
-				</div>
-
+			<div class="wrap text-center">
+				<a href="https://www.palisadesfcu.org/"><img src="img/logo.png"></a>
 			</div>
 		</div>
 
 		<div class="fine-print group wrap">
 			<img src="img/logo-equal-opportunity.png" class="equal-opportunity">
-			* APR = Annual Percentage Rate. Rates as of 8/1/15. Credit restrictions apply. Rates based on creditworthiness, term and other factors. Rate and promotion are subject to change at any time. See credit union for details. All loans subject to approval. Payment example: $10,000 auto loan for 60 months at 3.75% APR will result in a monthly payment of $183.05. Membership eligibility required. A Prime Share account (membership) with a minimum deposit is required upon loan approval. See a Member Service Specialist for more details. Calculator based on best scenario. Your savings may be different depending on your unique situation and creditworthiness. Auto Loan &amp; Personal rate include .5% discount for Direct Deposit. This credit union is insured by the National Credit Union Administration. These calculators are intended to help you analyze your financial needs and/or provide approximate information about loan payments; they do not constitute an offer to extend credit.
+			* APR = Annual Percentage Rate. Rates as of 1/1/16. Credit restrictions apply. Rates based on creditworthiness, term and other factors. Rate and promotion are subject to change at any time. See credit union for details. All loans subject to approval. Membership eligibility required. A Prime Share account (membership) with a minimum deposit is required upon loan approval. See a Member Service Specialist for more details. Calculator based on best scenario. Your savings may be different depending on your unique situation, creditworthiness and member relationship. These calculators are intended to help you analyze your financial needs and/or provide approximate information about loan payments; they do not constitute an offer to extend credit. This credit union is Insured by American Share Insurance/Excess Share Insurance Corporation.
 		</div>
 
 	</main>
