--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 				<div class="tool group">
 
 					<div class="intro pad group">
-						<div class="thermometer savings-thermometer white" data-giraph-api-key="989a24c009a9376a67e31a1a9dbf135d"></div>
-						<script src="//giraph.io/api/thermometer/v1/js/widget.js"></script>
+						<div class="thermometer savings-thermometer" data-giraph-api-key="e65e9c2632e8d492fdc4be3f8cfffe9e"></div>
+						<script src="//giraph.io/thermometer/api/v1/js/widget.js"></script>
 						<p>Our goal is to save our members <strong>$500,000</strong> in interest and fees this year to put back into what matters.</p>
 						<p>See how much you can save by telling us a little more about your loans below:</p>
 					</div>
