Update apply button text and link, and change url for footer logo.

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 					<p>Save up to <strong>$<span class="result loan-personal"></span></strong> on your <strong>Personal Loan</strong>.</p>
 					<p>Additional savings may be possible! Contact us for details.</p>
 					<div class="text-center pad">
-						<a href="https://www.palisadesfcu.org/bank/applications/loan-application" class="btn apply" onClick="_gaq.push(['_trackEvent', 'Apply', 'Click', 'Clicked Apply Button']);">Go fetch me the savings!<span>Apply Now!</span></a>
+						<a href="https://schoolemployees.nssecurebanking.org/login" class="btn apply" onClick="_gaq.push(['_trackEvent', 'Apply', 'Click', 'Clicked Apply Button']);"><span>Apply Now!</span></a>
 						<a class="btn go-back">&laquo; go back</a>
 					</div>
 
@@ -122,7 +122,7 @@
 
 		<div class="footer-bar group">
 			<div class="wrap text-center">
-				<a href="https://www.palisadesfcu.org/"><img src="img/logo.png"></a>
+				<a href="https://www.selccu.org/"><img src="img/logo.png"></a>
 			</div>
 		</div>
 
