Add quiet class and include a note for non-members.

--- a/index.html
+++ b/index.html
@@ -110,8 +110,9 @@
 					<p>Save up to <strong>$<span class="result loan-personal"></span></strong> on your <strong>Personal Loan</strong>.</p>
 					<p>Additional savings may be possible! Contact us for details.</p>
 					<div class="text-center pad">
-						<a href="https://schoolemployees.nssecurebanking.org/login" class="btn apply" onClick="_gaq.push(['_trackEvent', 'Apply', 'Click', 'Clicked Apply Button']);"><span>Apply Now!</span></a>
-						<a class="btn go-back">&laquo; go back</a>
+						<p><a href="https://schoolemployees.nssecurebanking.org/login" class="btn apply" onClick="_gaq.push(['_trackEvent', 'Apply', 'Click', 'Clicked Apply Button']);"><span>Apply Now!</span></a></p>
+						<p class="quiet">If you are not a current member, non-members must meet eligibility requirements. Call 1-440-324-3400 or 1-800-451-6315 for details.</p>
+						<p><a class="btn go-back">&laquo; go back</a></p>
 					</div>
 
 				</div>
