Add in styles for backpack counts, but comment them out.

--- a/index.html
+++ b/index.html
@@ -33,6 +33,42 @@
 						<p>See how much you can save by telling us a little more about your loans below:</p>
 					</div>
 
+					<div class="thirds group">
+						<div class="third">
+							<img src="img/third-header-card.png" class="third-header">
+							<div class="third-content">
+								Get a Personal Loan or Credit Card
+							</div>
+							<!--
+							<div class="third-footer">
+								1 backpack donated
+							</div>
+							-->
+						</div>
+						<div class="third">
+							<img src="img/third-header-car.png" class="third-header">
+							<div class="third-content">
+								Get a New or Used Auto Loan
+							</div>
+							<!--
+							<div class="third-footer">
+								2 backpacks donated
+							</div>
+							-->
+						</div>
+						<div class="third">
+							<img src="img/third-header-house.png" class="third-header">
+							<div class="third-content">
+								Get a Home Equity or Home Mortgage
+							</div>
+							<!--
+							<div class="third-footer">
+								3 backpacks donated
+							</div>
+							-->
+						</div>
+					</div>
+
 					<div class="loan-auto calculator bg-teal">
 						<div class="fourty">
 							<img src="img/rate-auto.png">
