Slight change to wording with regard to credit cards.

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 						<div class="third">
 							<img src="img/third-header-card.png" class="third-header">
 							<div class="third-content">
-								Get a Personal Loan or Credit Card
+								Get a Personal Loan or New Credit Card
 							</div>
 							<!--
 							<div class="third-footer">
